# translit

./: .env.example  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_UPGRADES.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  THREAT_MODEL.md  build.rs  deny.toml  measurements.jsonl  mkdocs.yml  pyproject.toml  unidecode_usage_analysis.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  coverage_request.yml  extension_idea.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  conversations-resolved.yml  dependabot-auto-merge.yml  docker.yml  docs.yml  perf-gate.yml  publish-translit-rs.yml  publish.yml  secret-scan.yml
benchmarks/: README.md  bench_core.rs  bench_iai.rs  bench_personas.rs  bench_pyperf.py  bench_quick.py  bench_ratio.py  bench_slugify.py  bench_transliterate.py  bench_unidecode_own.py  bench_vs_unidecode.py  diff_vs_unidecode.py  persona_corpus.rs  quality_baseline.md  quality_cer_wer.py  results_quick.txt  results_slugify.txt  results_transliterate.txt
benchmarks/adversarial_eval/: README.md  __init__.py  __main__.py  corpora.py  metrics.py
benchmarks/adversarial_eval/reports/: bitabuse.md  youtube-spam.md
benchmarks/quality_fixtures/: cer_wer_pairs.tsv
data/: confusables_supplement.tsv
docs/: DEPENDENCY_UPGRADES.md  RUST_API.md  THREAT_MODEL.md  _index_nav.md  _redirects  benchmarks.md  cli.md  conftest.py  data-engineer-guide.md  docker.md  formal-verification.md  index.md  librarian-guide.md  limitations.md  ml-pipeline-guide.md  performance.md  policy-templates.md  provenance.md  reference.md  requirements.txt  scholarly-guide.md  security-guide.md  web-developer-guide.md
docs/api/: classes.md  encoders.md  encoding.md  enums.md  exceptions.md  graphemes.md  index.md  language-profiles.md  pipelines.md  predicates.md  transforms.md
docs/architecture/: data-tables.md  emoji-engine.md  emoji-plugins.md  performance.md  pipeline.md  security.md  testing-guarantees.md  transliteration-comparison.md  transliteration-engine.md
docs/migration/: from-anyascii.md  from-confusable-homoglyphs.md  from-pathvalidate.md  from-python-slugify.md  from-unidecode.md  index.md  unidecode-recipes.md
docs/security/: adversarial-defense.md
docs/user-guide/: abjad-transliteration.md  confusables.md  filenames.md  getting-started.md  graphemes.md  language-detection.md  language-support.md  llm-pipelines.md  normalization.md  normalize-first.md  pipeline.md  slugification.md  text-cleaning.md  tokenizer-preprocessing.md  transliteration.md
examples/: perf_workload.rs  rust_quickstart.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: normalize_confusables.rs  normalize_user_input.rs  sanitize_user_input.rs  security_clean.rs  strip_obfuscation.rs
packaging/translit-rs-deprecation/: README.md  pyproject.toml
packaging/translit-rs-deprecation/translit/: __init__.py
proptest-regressions/: pipeline.txt  presets.txt  slugify.txt  transliterate.txt
python/disarm/: __init__.py  __main__.py  _api.py  _compat.py  _compat.pyi  _core.pyi  _disarm.pyi  _enums.py  _enums.pyi  _presets.py  _text.py  _text.pyi  _types.py  _types.pyi  codec.py  files.py  normalization.py  security.py
python/translit/: __init__.py  __main__.py  _api.py  _compat.py  _compat.pyi  _enums.py  _enums.pyi  _presets.py  _text.py  _text.pyi  _translit.pyi  _types.py  _types.pyi  normalization.py  security.py
requirements/: bench.txt
scripts/: audit_language_consistency.py  bootstrap_dicts.sh  build_arabic_dict.py  build_hebrew_dict.py  build_persian_dict.py  extract_phf_data.py  gen_confusables.py  gen_emoji_data.py  gen_width_data.py  generate_docs_index.sh  generate_unicode_expansion.py  harvest_wiktionary_persian.py  perf_fingerprint.py  perf_stat.sh
src/: api.rs  case_fold.rs  confusables.rs  context.rs  emoji.rs  encoders.rs  encoding.rs  error.rs  fastpath.rs  filename.rs  grapheme.rs  hostname.rs  lib.rs  limits.rs  log_injection.rs  normalize.rs  pipeline.rs  presets.rs  reverse.rs  scripts.rs  slugify.rs  transliterate.rs  unicode_ranges.rs  utils.rs  whitespace.rs  width.rs  zalgo.rs
src/py/: case_fold.rs  confusables.rs  emoji.rs  encoders.rs  encoding.rs  filename.rs  grapheme.rs  hostname.rs  log_injection.rs  mod.rs  normalize.rs  pipeline.rs  presets.rs  reverse.rs  scripts.rs  slugify.rs  transliterate.rs  whitespace.rs  width.rs  zalgo.rs
src/tables/: confusables_data.rs  emoji_data.rs  hangul.rs  hanzi_pinyin.rs  mod.rs  transliteration.rs
src/tables/data/: char_width.tsv  confusables.tsv  confusables_to_cyrillic.tsv  confusables_to_latin.tsv  emoji_presentation.tsv  hanzi_pinyin_toned.tsv  reverse_el.tsv  reverse_ru.tsv  reverse_uk.tsv  translit_default.tsv  translit_default_smp.tsv  translit_iso9.tsv  translit_lang_am.tsv  translit_lang_bg.tsv  translit_lang_ca.tsv  translit_lang_de.tsv  translit_lang_el.tsv  (+17 more)
tests/: api_pure_rust.rs  conftest.py  exhaustive_grapheme.rs  exhaustive_transliterate.rs  integration_confusables.rs  integration_emoji.rs  integration_slugify.rs  integration_transliterate.rs  integration_transliterate_abjad.rs  integration_transliterate_cjk.rs  integration_transliterate_european.rs  integration_transliterate_indic.rs  integration_whitespace.rs  test_adversarial_eval.py  test_ancient_scripts.py  test_api_stability.py  test_attack_corpus.py  test_awesome_slugify_compat.py  test_batch_consistency.py  test_bug_combining_marks.py  test_bug_confusable_ordering.py  test_bug_demojize_spacing.py  test_bug_greek_confusables.py  test_bug_regressions.py  test_bug_strip_obfuscation_case.py  test_bug_strip_obfuscation_homoglyphs.py  test_cached_transliterator.py  test_case_folding.py  test_cjk_transliteration.py  test_cli.py  test_compat.py  test_concurrency.py  test_confusable_coverage.py  test_confusables.py  test_confusables_cross_script.py  test_constant_parity.py  test_context_arabic.py  test_context_hebrew.py  test_context_persian.py  test_dedup_batch.py  (+46 more)
tests/common/: mod.rs
