[package]
name = "disarm"
version = "0.9.1"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Unicode canonicalization and TR39 confusable analysis: building blocks for text-security pipelines (homoglyph/bidi/zalgo handling) plus standards-based transliteration"
repository = "https://github.com/raeq/disarm"
homepage = "https://disarm.dev"
documentation = "https://docs.disarm.dev"
keywords = ["unicode-security", "homoglyph", "confusable", "transliteration", "normalization"]
categories = ["text-processing", "internationalization", "encoding"]

[lib]
name = "_disarm"
crate-type = ["cdylib", "lib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
embed-dicts = []

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
regex = "1"
# Already a transitive dependency via `regex`; promoted to a direct dependency
# for the LeftmostLongest/LeftmostFirst replacement automata (#242 cluster H
# items 1-2). No new supply-chain surface.
aho-corasick = "1"
bitflags = "2"
unicode-normalization = "0.1"
phf = "0.13"
unicode-segmentation = "1"
encoding_rs = "0.8"
chardetng = "1.0"
idna = "1"  # UTS#46 / punycode decoding for is_suspicious_hostname (#63)
thiserror = "2.0.18"

[build-dependencies]
phf_codegen = "0.13"

[dev-dependencies]
proptest = "1"
# criterion 0.8 requires Rust 1.86+. The shipped library MSRV stays `rust-version`
# above (criterion is dev-only — never built by downstream consumers); only running
# the benches or `cargo test`/`cargo clippy --all-targets` in this repo needs 1.86+.
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.16.1"

[[bench]]
name = "bench_core"
path = "benchmarks/bench_core.rs"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# PyO3 constraints — these patterns are required by the PyO3 API
needless_pass_by_value = "allow"  # PyO3 extracts Python types by value
unused_self = "allow"             # #[pymethods] require &self even when unused
unnecessary_wraps = "allow"       # PyO3 functions must return PyResult
should_implement_trait = "allow"  # ErrorMode::from_str returns PyResult, not FromStr
implicit_hasher = "allow"         # #[pyfunction] requires concrete HashMap
used_underscore_items = "allow"   # _prefix convention for Python-private functions
struct_excessive_bools = "allow"  # Pipeline config structs mirror Python kwargs
fn_params_excessive_bools = "allow"
too_many_arguments = "allow"      # PyO3 function signatures mirror Python APIs
# Pedantic lints that don't add value for this codebase
too_many_lines = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
type_complexity = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "bench_personas"
path = "benchmarks/bench_personas.rs"
harness = false

# Deterministic estimated-cycle gate (#234 V10). iai-callgrind needs Valgrind to
# *run* (Linux CI only) but compiles anywhere.
[[bench]]
name = "bench_iai"
path = "benchmarks/bench_iai.rs"
harness = false
