[build-system]
requires = ["maturin>=1.13.3,<2"]
build-backend = "maturin"

[project]
name = "translit-rs"
version = "0.6.1"
description = "Unicode canonicalization and TR39 confusable analysis for Python: building blocks for text-security pipelines (homoglyph/bidi/zalgo/invisible-character handling) plus standards-based transliteration — powered by Rust"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Richard Quinn", email = "quinn.richard@gmail.com" },
]
keywords = [
    "unicode-security", "homoglyph", "confusable", "tr39", "idn",
    "anti-spoofing", "text-sanitization", "adversarial", "canonicalization",
    "bidi", "zalgo", "normalization", "security",
    "transliteration", "slug", "slugify", "unidecode", "romanization",
    "filename", "sanitize", "grapheme", "encoding", "CJK", "pinyin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
    "Topic :: Security",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
]
dev = [
    "translit-rs[test]",
    "ruff==0.15.16",
    "maturin>=1.13.3,<2",
    "pre-commit>=3.0",
]
bench = [
    "pyperf>=2.6",
    "Unidecode>=1.3",
    "text-unidecode>=1.3",
    "anyascii>=0.3",
    "python-slugify>=8.0",
    "pathvalidate>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.0",
]
# NOTE: context-aware transliteration (transliterate(context=True), ar/fa/he) is
# NOT pip-installable. The dictionaries are large (~37 MB) and are not shipped in
# the wheel. There used to be empty `arabic`/`hebrew`/`context` extras here; they
# did nothing (installing them added no dictionaries), so they were removed (#56).
# To enable context mode: build the dictionaries from a source checkout with
#   bash scripts/bootstrap_dicts.sh
# and point the TRANSLIT_DICT_DIR environment variable at the output directory.
# (Tracked for a proper packaged distribution — see issues #56/#60.)

[project.scripts]
translit = "translit.__main__:main"

[project.urls]
Homepage = "https://github.com/raeq/translit"
Repository = "https://github.com/raeq/translit"
Documentation = "https://translit.readthedocs.io/"
Issues = "https://github.com/raeq/translit/issues"
Changelog = "https://github.com/raeq/translit/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "translit._translit"
features = ["pyo3/abi3-py39"]
# Context dictionary data files (data/*.bin) are NOT shipped in the wheel. They
# are built from source via `bash scripts/bootstrap_dicts.sh` and located at
# runtime via the TRANSLIT_DICT_DIR environment variable (see src/context.rs).
# For a self-contained build, compile with the `embed-dicts` Cargo feature.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-m", "not formal"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "formal: exhaustive formal invariant tests — run before release with 'pytest -m formal'",
    "hypothesis: property-based / fuzz tests using Hypothesis — expensive, run locally not in CI",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["translit"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["python"]
reportMissingModuleSource = false
